--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "your-project-name",
+  "name": "nodejs-music-player",
   "version": "1.0.0",
-  "description": "A simple Node.js app to search YouTube videos",
-  "main": "app.js",
+  "description": "A Node.js music player app with Spotify-like UI and @tomphttp/bare-server-node integration",
+  "main": "server.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "ejs": "^3.1.6"
+    "@tomphttp/bare-server-node": "2.0.2",
+    "express": "^4.19.2"
   },
-  "author": "",
-  "license": "ISC"
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
